--- a/public/index.html
+++ b/public/index.html
@@ -15,8 +15,9 @@
         <form id="message-form">
             <input name="message" type="text" placeholder="message"/>
             <button>send</button>
+           
         </form>
-        
+        <button id="send-location">Send Location</button>        
         <script src="/socket.io/socket.io.js"></script>
         <script src='/js/libs/jquery-3.2.1.min.js'></script>
         <script src='/js/index.js'></script>
